# ex3_new

./: CMakeLists.txt  Makefile  MapReduceClient.cpp  MapReduceFramework.cpp  MapReduceFramework.h  README  SampleClient.cpp  scratch_1.cpp
Barrier/: Barrier.cpp
Sample Client/: SampleClient.cpp
